--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -512,9 +512,9 @@ img {
   font-size: 1rem;
 }
 
-.footer__social-link:hover {
+/* .footer__social-link:hover {
   background-color: var(--black-color);
-}
+} */
 .footer__social-link .facebook:hover {
   background-color: #1877F2;
 }
